feat: enhance CORS configuration by allowing origins from environment variable and adding scoring endpoints